# mtg-deckbuilder

./: .gitignore  AGENTS.md  COMPLIANCE_NOTES.md  Cargo.toml  MIGRATION_PLAN.md  Makefile  README.md  RESEARCH_NOTES.md  UNTAPPED_SCHEMA_INFERENCE.md  pyproject.toml
data/processed/: sample_cards.json
data/raw/: sample_arena_deck.txt
docs/research/: steam-arena-workbench-2026-05-16.md
examples/: sample_catalog.csv  sample_catalog.json  sample_catalog.jsonl  sample_catalog.yaml  sample_deck.txt
mtgdeckbuilder/: __init__.py
reports/experiments/: foundation-001.md  foundation-002.md  foundation-003.md  foundation-004.md  foundation-005-010-source-cohesive-csv.md  foundation-011-catalog-backed-validation.md  foundation-012-vawlrathh-reference.md
src/: lib.rs  main.rs  web.rs
src/analysis/: mod.rs
src/api_contract/: mod.rs
src/catalog/: mod.rs
src/cli/: mod.rs
src/core/: mod.rs  models.rs  normalization.rs
src/domain/: mod.rs
src/eval/: consistency.rs  matchup_posture.rs  mod.rs  scoring.rs  wildcard_cost.rs
src/export/: arena.rs  mod.rs  reports.rs
src/features/: archetype_tags.rs  card_roles.rs  deck_features.rs  mana_curve.rs  mana_sources.rs  mod.rs
src/ingest/: card_database.rs  collection_parser.rs  decklist_importer.rs  mod.rs  mtgjson_loader.rs  scryfall_loader.rs
src/llm/: mod.rs
src/mcp/: server.rs  tools.rs
src/mtgdeckbuilder/: __init__.py  __main__.py  cli.py
src/observability/: deck_hash.rs  experiment_logger.rs  mod.rs  source_snapshot.rs
src/report/: mod.rs
src/result_log/: mod.rs
src/rules/: arena_compat.rs  bans.rs  copy_limits.rs  formats.rs  legality.rs  mod.rs  validator.rs
src/search/: beam_search.rs  candidate_generator.rs  genetic_search.rs  mod.rs  mutator.rs
src/sim/: arena_like_smoother.rs  bo1.rs  bo3.rs  early_turns.rs  london_mulligan.rs  mod.rs  opening_hand.rs  stress_tests.rs
src/stats/: mod.rs
src/web_assets/: app.css  app.js  index.html
tests/: cli.rs  parity.rs  test_advisor_report.py  test_arena_parser.py  test_card_normalization.py  test_deck_rank_build.py  test_exporter.py  test_normalize_report.py  test_smoke_eval.py  test_source_profiles_csv.py  test_validator.py  v1.rs  web_api.rs
tests/fixtures/: cards_scryfall.json  collection.csv  mtgjson_cards.json  result_logs.csv  result_logs.json  result_logs.jsonl  scryfall_cards.json
(+27 files in other folders)
