[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "mtgdeckbuilder"
version = "0.1.0"
description = "Offline MTG Arena deck parsing, validation, feature extraction, and export tools."
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-only"
dependencies = []
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

[project.scripts]
mtgdeckbuilder = "mtgdeckbuilder.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
